# kafkareport

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: conf.py  index.rst  kafkareport.rst  modules.rst
kafkareport/: __init__.py  auth.py  cli.py  helpers.py  logdirs.py
livetest/: README.md  conf.json  msk-iam.yaml  msk.yaml  populate.py
tests/: conftest.py  test_threading.py  test_topics.py
tests/helper_files/: env-iam.json  env.json  localenv.json
