[tool.poetry]
name = "kafkareport"
repository = "https://github.com/newvoll/kafkareport"
homepage = "https://github.com/newvoll/kafkareport"
version = "0.0.2"
description = "Reporting tool for kafka topics with retentions, sizes, earliest and latest message timestamps"
authors = ["olmouse <olmouse@newvoll.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prettytable = "^3.10.0"
confluent_kafka = "^2.4.0"
kafka-python = "^2.0.2"

[tool.poetry.scripts]
kafkareport = "kafkareport.cli:main"

[tool.poetry.group.develop.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"
pylint = "^3.2.3"
pytype = "^2024.4.11"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[tool.isort]
profile = "black"

[tool.pylint]
ignored-classes = ["pytest"]
ignore-paths = '^docs/'

[tool.pytype]
inputs = ['kafkareport']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/newvoll/kafkareport"
Documentation = "https://kafkareport.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/newvoll/kafkareport"
Issues = "https://github.com/newvoll/kafkareport/issues"
