[tool.poetry]
name = "kafkareport"
repository = "https://github.com/newvoll/kafkareport"
homepage = "https://github.com/newvoll/kafkareport"
version = "0.1.0"
description = "Reporting tool for kafka topics with retentions, sizes, earliest and latest message timestamps"
authors = ["uncertaininference <gituc@newvoll.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.10.0"
confluent_kafka = "^2.4.0"
kafka-python = "^2.3.2"

[tool.poetry.scripts]
kafkareport = "kafkareport.cli:main"

[tool.poetry.group.develop.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
ruff = "^0.15.16"
mypy = "^2.1.0"

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "SIM", "RUF", "C90",  # core
    "ARG", "A", "C4", "PIE", "RET", "PERF",           # code quality
    "S", "DTZ",                                         # security/correctness
    "LOG", "G",                                         # logging
    "FURB",                                              # modernization
    "TCH",                                               # type-checking imports
    "ERA",                                               # commented-out code
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/newvoll/kafkareport"
Documentation = "https://kafkareport.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/newvoll/kafkareport"
Issues = "https://github.com/newvoll/kafkareport/issues"
